##Text encoding: utf-8

2007-10-17 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* libs/Makefile.am: Added MAINTAINERCLEANFILES to remove Makefile.in.
	* libs/canvas/Makefile.am: Ditto.
	* libs/gcp/Makefile.am: Ditto.

2007-10-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* Makefile.am (MAINTAINERCLEANFILES): Remove gnome-doc-utils.make on
	maintainer-clean.
	(DISTCHECK_CONFIGURE_FLAGS): Disable schemas installation for
	distcheck target.
	* configure.ac: Fix broken output indentation.
	* gcu.pc.in: Added URL field. Fixed goffice package name.
	* gcu-unstable.pc.in: Ditto.
	* docs/man/Makefile.am: Formatting changes. Backported the better
	version of the 0.8 series. Added new manpages and their sources (all
	sources have been renamed!). Removed GNU make extensions usage.
	* docs/man/gcu_entities.dtd.in: Added an prefix to easily switch
	between stable and development version manpages. Added a central
	copyright/legalnotice note.
	* gcu_man_legal.xml: Added.
	* gchem3d-viewer.1.xml: Updated. Renamed to
	gchem3d-viewer-unstable.1.xml.
	* gchemcalc.1.xml: Ditto. Renamed to gchemcalc-unstable.1.xml.
	* gchemtable.1.xml: Ditto. Renamed to gchemtable-unstable.1.xml.
	* libgcu.3.xml: Ditto. Renamed to libgcu-unstable.3.xml.
	* gchem3d-viewer.1: Ditto. Renamed to gchem3d-viewer-unstable.1.
	* gchemcalc.1: Ditto. Renamed to gchemcalc-unstable.1
	* gchemtable.1: Ditto. Renamed to gchemtable-unstable.1.
	* libgcu.3: Ditto. Renamed to libgcu-unstable.3.
	* gchempaint-unstable.1.xml: Added.
	* gcrystal-unstable.1.xml: Ditto.
	* gspectrum-unstable.1.xml: Ditto.
	* gchempaint-unstable.1: Ditto.
	* gcrystal-unstable.1: Ditto.
	* gspectrum-unstable.1: Ditto.
	* docs/reference/Makefile.am: Backported from 0.8 series. Removed GNU
	make extensions usage.
	* plugins/paint/arrows/Makefile.am: Backported cleaner version from
	0.8 series. Formatting fixes. Fixed install-data-local and added
	missing uninstall-local targets for schemas installation.